kubernetes_deploy/database-migration-production/queue_worker_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "<to be filled in deploy_to_kubernetes script>"
  name: laa-legal-adviser-api-worker-database-migration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laa-legal-adviser-api-database-migration
      tier: worker
      env: production
  template:
    metadata:
      labels:
        app: laa-legal-adviser-api-database-migration
        tier: worker
        env: production
        service_area: laa-get-access
        service_team: cla-fala
    spec:
      containers:
      - image: "<to be set by deploy_to_kubernetes>"
        name: worker
        args: ["docker/run_worker.sh"]
        readinessProbe:
          exec:
            command: ["docker/ping_services.sh"]
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          exec:
            command: ["docker/ping_services.sh"]
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
